--- a/src/components/Single/components/Calculator.css
+++ b/src/components/Single/components/Calculator.css
@@ -1,17 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Yanone+Kaffeesatz:wght@200..700&display=swap");
 
+.main-container {
+  width: 100%;
+}
+
 .form {
   display: flex;
   justify-content: space-evenly;
   align-items: start;
   flex-direction: row;
   width: 100%;
-  margin: 2rem auto;
+  margin: auto;
 }
+
 .form-container,
 .packs-container {
   width: 40%;
-  margin: 4rem auto;
+  margin: 2rem auto;
   text-align: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 2rem 4rem;
@@ -20,67 +25,10 @@
 }
 
 .form-container {
+  padding: 2rem 4rem 3rem;
+}
+.packs-container {
   padding: 5rem 3.5rem;
-}
-.payment {
-  width: 90%;
-  margin: 0 auto 2rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding: 2rem 4rem;
-  border-radius: 12px;
-}
-
-.payment-details {
-  line-height: 2;
-  font-size: medium;
-  color: #282c34;
-  width: 25rem;
-  margin: auto;
-  padding: 0 1rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-.sub-header {
-  font-weight: 900;
-  font-size: large;
-  text-transform: uppercase;
-  text-align: center;
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  margin: 0 auto;
-}
-
-.input-sales {
-  width: 90%;
-  margin: auto;
-}
-
-.sales-header {
-  width: 60%;
-  display: flex;
-  justify-content: space-between;
-  margin: auto;
-  text-transform: uppercase;
-}
-
-.sales-header span {
-  border-bottom: 2px solid black;
-  margin-bottom: 1rem;
-  font-size: large;
-  font-weight: 700;
-}
-
-#floatingInput {
-  margin: 0;
-}
-
-.submit-button {
-  width: 90%;
-  margin: auto;
-  text-align: center;
 }
 
 .copy {
@@ -96,11 +44,13 @@
   align-items: center;
   padding: 0 2rem;
 }
+
 .copy img {
   width: 30px;
   background-color: transparent;
   padding: 0.3rem;
 }
+
 .copy span {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
@@ -115,21 +65,30 @@
   opacity: 0.6;
 }
 
-.momo-copied {
+.copied {
   text-align: center;
+  color: red;
 }
 .totalAmt {
   margin: 1rem auto;
+}
+
+.sub-header {
+  font-weight: 900;
+  font-size: large;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  margin: 0 auto;
 }
 
 .guide {
   text-align: left;
   font-family: "Montserrat", sans-serif;
 }
-.small-text {
-  font-size: medium;
-  margin-bottom: 2rem;
-}
+
 .error {
   color: red;
   margin: 0;
@@ -140,32 +99,13 @@
     margin: 2rem 0;
     font-size: large;
   }
-  #floatingInput {
-    font-size: small;
-  }
-
-  .input-sales label {
-    font-size: small;
-  }
-
-  .small-text {
-    font-size: small;
-  }
-  .copy {
-    font-size: medium;
-  }
-
-  .sales-header {
-    width: 80%;
-    margin: 1rem auto;
-  }
 
   .form {
     flex-direction: column;
   }
+
   .form-container,
-  .packs-container,
-  .payment {
+  .packs-container {
     width: 80%;
     margin: 2rem auto;
     text-align: center;
@@ -173,14 +113,5 @@
     padding: 2rem;
     border-radius: 12px;
     color: #282c34;
-  }
-
-  .input-sales {
-    width: 100%;
-  }
-
-  .payment-details {
-    width: 100%;
-    font-size: smaller;
   }
 }
